# python-template

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
hooks/: formatters.py  git.py  post_gen_project.py  vscode.py
tests/: context.yaml
{{cookiecutter.project_slug}}/: .cspell.json  .gitignore  .pre-commit-config.yaml  .python-version  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: cruft-update.yml
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py  __main__.py
{{cookiecutter.project_slug}}/tests/: test_main.py
