[project]
name = "python-template"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Piotr Grędowski", email = "piotrgredowski@gmail.com" }]
dependencies = [
    "loguru>=0.7.2",
    "tqdm>=4.66.1",
    "pydantic>=2.3.0",
    "python-dotenv>=1.0.0",
    "cruft>=2.15.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.9.1",
    "cookiecutter>=2.3.0",
    "cruft>=2.15.0",
    "icecream>=2.1.3",
    "pre-commit>=3.4.0",
    "pytest>=7.4.2",
    "ruff>=0.0.290",
]

[tool.rye.scripts]
generate_example = { cmd = "python -m cookiecutter --config-file tests/context.yaml --no-input . --output-dir _generated_projects --overwrite-if-exists" }

[tool.hatch.metadata]
allow-direct-references = true


[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
ignore-init-module-imports = true
target-version = "py311"

include = ["hooks"]

select = [
    "F",   # Pyflakes
    "E",   # pycodestyle
    "W",   # pycodestyle
    "C90", # mccabe
    "I",   # isort
    "N",   # pep8-naming
    # "D", # pydocstyle
    "UP",  # pyupgrade
    "YTT", # flake8-2020
    # "ANN", # flake8-annotations
    "ASYNC", # flake8-async
    # "S", # flake8-bandit
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "COM", # flake8-commas
    # "CPY", # flake8-copyright
    "C4", # flake8-comprehensions
    # "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    # "DJ", # flake8-django
    # "EM", # flake8-errmsg
    "EXE", # flake8-executable
    # "FA",  # flake8-future-annotations
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    # "G", # flake8-logging-format
    # "INP", # flake8-no-pep420
    "PIE", # flake8-pie
    # "T20", # flake8-print
    # "PYI",  # flake8-pyi
    "PT", # flake8-pytest-style
    "Q",  # flake8-quotes
    # "RSE",  # flake8-raise
    "RET", # flake8-return
    # "SLF",  # flake8-self
    # "SLOT", # flake8-slots
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    # "TCH", # flake8-type-checking
    # "INT", # flake8-gettext
    "ARG", # flake8-unused-arguments
    # "PTH", # flake8-use-pathlib
    # "TD",  # flake8-todos
    # "FIX", # flake8-fixme
    # "ERA", # eradicate
    # "PD", # pandas-vet
    # "PGH", # pygrep-hooks
    "PL", # Pylint
    # "TRY", # tryceratops
    # "FLY", # flynt
    # "NPY", # NumPy-specific rules
    # "AIR", # Airflow
    # "PERF", # Perflint
    "RUF", # Ruff-specific rules
]
unfixable = ["F841"]
ignore = ["PLR2004", "PLW1510"]

[tool.ruff.isort]
known-first-party = []
force-single-line = true

[tool.ruff.per-file-ignores]
"**/tests/**/*.py" = ["E501", "SLF001"]

[tool.ruff.mccabe]
max-complexity = 7
